css/styles.css
/* Глобальные настройки*/
* {
    margin: 0;
    padding: 0;
}

body {
    font-family: roboto, sans-serif;
}

/* Заголовок */
#head {
    width: 100%;
    position: fixed;
    top: 0;
    height: 60px;
    z-index: 10;
}

#main-nav {
    background-color: #d3b05f;
    height: 100%;
    text-align: center;
}

.logo-holder {
    float: left;
    margin-left: 10px;
    margin-top: -2px;
}

.logo-img {
    height: 60px;
}
.logo-img:hover{
    cursor: pointer;
}

#main-menu {
    list-style: none
}

.main-menu-item {
    display: inline-block;
    margin: 17px 8vw 10px 0;
    top: 0;
}

.main-menu-item a {
    color: white;
    text-decoration: none;
    transition: color 0.2s ease;
}

.main-menu-item a:hover {
    color: #5bbee6;
}

.title-container {
    display: flex;
    align-items: center; /* Выравнивание по вертикали */
    justify-content: center; /* Выравнивание по горизонтали */
    height: 100%;
}

.main-title{
    color: white;
    text-align: center;
    font-size: 33px;
    font-weight: bold;
    font-family: 'Ponomar Unicode';
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
}

/*медиа заголовка*/

@media screen and (min-width: 1700px) {
    #head{
        height: 65px;
    }
    #main-menu h3{
        font-size: 1.5rem;
        font-weight: 700;
    }
    .logo-img {
        height: 65px;
    }
}

@media screen and (max-width: 500px) {
    #head{
        height: 90px;
    }
    .main-title{
        letter-spacing: 3px;
    }
}

/* Бургер */

.burger-wrapper{
    display: none;
}

/* Шапка */

.cover {
    background: url("/images_church/main_view.jpg") center;
    background-size: cover;
    color: white;
    padding: 20vw 0 30vw;
}

@media screen and (max-width: 1470px) {
    .cover{
        margin-top: 30px;
    }
}
@media screen and (max-width: 800px) {
    .cover{
        width: 130%;
        margin-left: -15%;
        padding: 30vw 0 30vw;
    }
}
@media screen and (max-width: 700px) {
    .cover{
        width: 140%;
        margin-left: -20%;
        margin-top: 60px;
        padding: 30vw 0 35vw;
    }
}
@media screen and (max-width: 500px) {
    .cover{
        width: 150%;
        margin-left: -25%;
        margin-top: 80px;
        padding: 40vw 0 50vw;
    }
}

.cover-dimmer {
    background: rgba(0, 0, 0, 0.5);
    padding: 40px;
    text-align: center;
}

.cover-dimmer p {
    font-size: 1.2rem;
}

h1 {
    font-size: 2.5rem;
    margin-top: -8px;
    margin-bottom: .25rem;
}

.button-cover {
    padding: 0.7rem;
    font-size: 1rem;
    font-weight: bold;
    color: white;
    background-color: transparent;
    margin-top: 1rem;
    border-color: white;
    transition: background-color 0.2s ease;
}

.button-cover:hover {
    background-color: #5bbee6;
    cursor: pointer;
}

/* Расписание */

.schedule {
    background-color: #d7c6a0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    padding-top: 20px;
    padding-bottom: 70px;
    color: rgb(249, 249, 249);
    text-align: center;
}

.schedule img {
    width: 80%;
    padding-top: 10px;
}

@media screen and (max-width: 900px) {
    .schedule img {
        width: 110%;
        margin-left: -5%;
    }
}
@media screen and (max-width: 500px) {
    .schedule img {
        width: 115%;
        margin-left: -7.5%;
    }
}

p {
    color: white;
    padding: 1rem;
    font-size: 1.3rem;
}

.icon_image {
    width: 190px;
    height: 190px;
    margin: 20px 50px;
    align-self: center;
}

.icon_light:hover{
    transform: rotate(360deg);
    transition: 1s ease-in;
    cursor: pointer;
}

.icon_dark:hover{
    transform: scale(1.2);
    transition: 1s ease-in;
    cursor: pointer;
}

@keyframes anim-dark-icon {
    from{
        margin-bottom: 10px;
    }
    50%{
        margin-bottom: 0;
    }
    75%{margin-bottom: 10px;}
    to{margin-bottom: 0}
}

/* Разделитель */

.dark_section_separator {
    background-color: #133654;
    padding: 5px 4vw;
}

.dark_section_separator div {
    background-color: white;
    padding: 2px 10px;
    border-radius: 30px;
}

/* Тезис Борис */

.thesis_boris {
    padding-top: 4rem;
    background-color: #133654;
    color: white;
    padding-bottom: 3rem;
}

.thesis_boris div{
    text-align: center;
}

/*КАК ПРОХОДИТ ОБУЧЕНИЕ*/
/*Карточки с границей*/

.cont-steps{
    background-color: #0e5d91;
    position: relative;
    transition: 0.5s all;
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
}
.step-card::before, .step-card::after{
    box-sizing: border-box;
}
.step-card{
    display: inline-block;
    width: 250px;
    aspect-ratio: 1/1;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
    box-shadow: 0 20px 35px rgba(0,0,0,0.3);
    /* border-radius: 20px; */
    overflow: hidden;
    background: linear-gradient(120deg, #2980b9, #133654);
    position: relative;
    margin-left: 10px;
    margin-right: 10px;
    transition: .5s all;
}
@media screen and (max-width: 1381px) {
    .step-card{
        margin-bottom: 20px;
    }
}
.step-card:before{
    content: "";
    position: absolute;
    width: 150%;
    height: 150%;
    top: -25%;
    left: -25%;
    background-image: conic-gradient(
            #04b0ee 20deg, transparent 120deg
    );
    animation: rotate 4s infinite linear;
    border-radius: 20px;
}
@keyframes rotate {
    100%{
        transform: rotate(-360deg);
        
    }
}
.step-card:nth-child(1)::after{
    content: "1";
}
.step-card:nth-child(2)::after{
    content: "2";
}
.step-card:nth-child(3)::after{
    content: "3";
}
.step-card:nth-child(4)::after{
    content: "4";
}
.step-card:nth-child(5)::after{
    content: "5";
}
/* ... */

